# fa-dae2-gnart

./: .env.example  .gitignore  .kafka_stream_state.json  CLAUDE.md  README.md  a_resolved.csv  docker-compose.yml  index.html  main.py  mkdocs.yml  pyproject.toml
.github/workflows/: deploy-docs.yml  pr_ci.yml
data/ethereum_0x02950460e2b9529d0e00284a5fa2d7bdf3fa4d72/: logs.json  transactions.json
dbt_project/: .sqlfluff  .sqlfluffignore  README.md  dbt_project.yml  profiles.yml
dbt_project/macros/: ethereum_macros.sql
dbt_project/snapshots/: snap_stablecoin.sql
dbt_project/tests/: test_block_number_range.sql  test_valid_address.sql
docs/: 00_overview.md  01_data_engineering.md  01_data_ingestion_pipeline.md  01_getting_started.md  02_data_modeling_transformation.md  03_analytics.md  index.md
docs/02_data_pipeline/: 01_source.md  021_source.md  022_modeling.md  023_transformation.md  02_modeling.md  03_transformation.md
docs/04_api_reference/: 041_data_sources.md  042_data_loading.md  043_configuration.md
docs/assets/: erd01.html
notebooks/: EDA.ipynb  eda.ipynb
sampledata/: logs_tiny.parquet  transactions.json  transactions_tiny.parquet
scripts/: Hurricanes_Wind_and_Sea_Surface_Temperature.ipynb  dbt.sh  ghrsst_downloader.py  sql_pg.sh
scripts/data_loading/: __init__.py  setup_snowflake.py  setup_snowflake_objects.py  snowflake_loading.py  verify_snowflake_setup.py
scripts/database/: __init__.py  client.py  connection_test.py  crud_demo.py  helper.py  loader.py
scripts/el/: load.py  (+4 more)
tests/: connection_test.py  test_connection.py  test_snowflake_connection.py
(+52 files in other folders)
