[project]
name = "fa-dae2-capstone-gnart"
version = "0.1.0"
description = "Capstone project for FA DAE2"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "jupyter>=1.1.1",
    "polars>=1.33.1",
    "psycopg>=3.2.10",
    "pyarrow>=21.0.0",
    "python-dotenv>=1.0.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["scripts"]
